added image to landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
         -->
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/landing.css" rel="stylesheet" type="text/css" />
     <!-- TODO: make sure bootstrap-responsive.min.css points to BootTheme
         generated file -->
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -56,27 +57,31 @@
           </div>
         </div>
   </div>
-  <div class="container-narrow">
-      <div class="masthead">
-          <ul class="nav nav-pills pull-right">
-              <li class="dropdown">
-                <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
-                <form class="dropdown-menu" id="login-dropdown-menu">
-                  <input class="form-control" name="email" type="email" placeholder="Email" id="login-email" required>
-                  <input class="form-control" name="password" type="password" placeholder="Password" id="login-password" required>
-                  <button class="form-control btn btn-primary btn-block" type="submit" id="login-submit">Sign In</button>
-                </form>
-              </li>
-          </ul>
-          <h3 class="muted">Bazaar</h3>
-      </div>
-      <hr>
-      <div class="jumbotron">
-          <h1>A market for students</h1>
-          <p class="lead">Bazaar is a place to buy and sell everyday items exclusively on campus.</p>
-          <a class="btn btn-large btn-success" data-toggle="modal" data-target="#signup-modal" id="signup">Sign up today</a>
-      </div>
-      <hr>
+  <div class="main">
+    <div class="container-narrow">
+        <div class="masthead">
+            <ul class="nav nav-pills pull-right">
+                <li class="dropdown">
+                  <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+                  <form class="dropdown-menu" id="login-dropdown-menu">
+                    <input class="form-control" name="email" type="email" placeholder="Email" id="login-email" required>
+                    <input class="form-control" name="password" type="password" placeholder="Password" id="login-password" required>
+                    <button class="form-control btn btn-primary btn-block" type="submit" id="login-submit">Sign In</button>
+                  </form>
+                </li>
+            </ul>
+            <h3 class="muted">Bazaar</h3>
+        </div>
+        <hr>
+        <div class="jumbotron">
+            <h1>A market for students</h1>
+            <p class="lead">Bazaar is a place to buy and sell everyday items exclusively on campus.</p>
+            <a class="btn btn-large btn-success" data-toggle="modal" data-target="#signup-modal" id="signup">Sign up today</a>
+        </div>
+        <hr>
+    </div>
+  </div>
+    <div class="container-narrow">
       <div class="row-fluid marketing">
           <div class="span6">
               <h4>Simple</h4>
