adds compressed image to landing page

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,5 +1,5 @@
 .main{
-  background-image: url("/images/splash.jpg");
+  background-image: url("/images/splash-min.jpg");
   background-size: 100%;
   background-position: center;
   color: white;
