--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,3 +1,19 @@
+
+@media (max-width: 979px){
+  .main{
+    background: fixed;
+    background-size: cover !important;
+  }
+  body{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  .container-narrow{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 .main{
   background-image: url("/images/splash-min.jpg");
   background-size: 100%;
