adds support for arrow keys in paging

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -143,8 +143,8 @@
 
             <nav>
               <ul class="pager">
-                <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Newer</a></li>
-                <li class="next"><a href="#">Older <span aria-hidden="true">&rarr;</span></a></li>
+                <li class="previous"><a href="#" onclick="this.blur();"><span aria-hidden="true">&larr;</span> Newer</a></li>
+                <li class="next"><a href="#" onclick="this.blur();">Older <span aria-hidden="true">&rarr;</span></a></li>
               </ul>
             </nav>
           </div>
