--- a/views/main.ejs
+++ b/views/main.ejs
@@ -41,7 +41,7 @@
     <input type="hidden" id="user-id" value="<%=userID%>"></input>
     <div class="container">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 navbar-container">
           <nav class="navbar navbar-default" role="navigation">
             <a class="navbar-brand" href="#">Bazaar</a>
             <div class="">
@@ -122,17 +122,28 @@
         </div>
       </div>
         <div class="row">
-          <div class="col-md-2 col-md-offset-8">
-            <select class="form-control" id="category-filter">
-              <option>All</option>
-              <% for (var i = 0; i < categories.length; i++) { %>
-                <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
-              <% } %>
-            </select>
+          <div class="control-panel col-md-3 panel panel-success">
+            <div class="panel-heading">
+              Control Panel
+            </div>
+            <div class="panel-body">
+              <div class="list-group">
+                <div class="list-group-item form-inline">
+                  <i class="fa fa-filter list-group-item-heading"></i>
+                  <select class="form-control" id="category-filter">
+                    <option>All</option>
+                    <% for (var i = 0; i < categories.length; i++) { %>
+                      <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
+                    <% } %>
+                  </select>
+                </div>
+                <div class="list-group-item">
+                  <i class="fa fa-sort-amount-desc"></i> Order by
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div id="post-container" class="col-md-8 col-md-offset-2 bg-primary">
+          <div id="post-container" class="col-md-7 col-md-offset-1 bg-primary">
             <div class="posts">
               <% if (posts[0]) { %>
                 <% include ../public/templates/posts.ejs %>
