--- a/views/main.ejs
+++ b/views/main.ejs
@@ -138,15 +138,18 @@
                   </select>
                 </div>
                 <div class="list-group-item">
-                  <i class="fa fa-sort-amount-desc"></i> Order by
+                  <i class="fa fa-sort-amount-desc"></i>
+                    <input type="radio" name='order' value="createdAt" checked="checked">Date
+                    <input type="radio" name='order' value="price">Price
                 </div>
-                <div class="list-group-item">
-                  <i class="fa fa-map-marker"></i> Radius
-                </div>
+                <div class="list-group-item form-inline">
+                  <i class="fa fa-map-marker"></i>
+                  <input type="range" class='form-control'>
+              </div>
               </div>
             </div>
           </div>
-          <div id="post-container" class="col-md-7 col-md-offset-1 bg-primary panel">
+          <div id="post-container" class="col-md-7 col-md-offset-1 bg-primary">
             <div class="posts">
               <% if (posts[0]) { %>
                 <% include ../public/templates/posts.ejs %>
