--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,9 +13,13 @@ h1, h2, h3, h4, h5, h6{
   font-weight: 500;
 }
 
+#map-canvas {
+  height: 200px;
+  margin: 0;
+  padding: 0;
+}
 .control-panel{
   padding: 0;
-  margin
 }
 
 .navbar-container{
