--- a/views/main.ejs
+++ b/views/main.ejs
@@ -36,6 +36,7 @@
       ga('send', 'pageview');
 
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   </head>
   <body>
     <input type="hidden" id="user-id" value="<%=userID%>"></input>
@@ -122,33 +123,46 @@
         </div>
       </div>
         <div class="row">
-          <div class="control-panel col-md-3 panel panel-success">
-            <div class="panel-heading">
-              Control Panel
-            </div>
-            <div class="panel-body">
-              <div class="list-group">
-                <div class="list-group-item form-inline">
-                  <i class="fa fa-filter list-group-item-heading"></i>
-                  <select class="form-control" data-style="btn-primary" id="category-filter">
-                    <option>All</option>
-                    <% for (var i = 0; i < categories.length; i++) { %>
-                      <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
-                    <% } %>
-                  </select>
-                </div>
-                <div class="list-group-item">
-                  <i class="fa fa-sort-amount-desc"></i>
-                    <input type="radio" name='order' value="createdAt" checked="checked">Date
-                    <input type="radio" name='order' value="price">Price
-                </div>
-                <div class="list-group-item form-inline">
-                  <i class="fa fa-map-marker"></i>
-                  <input type="range" class='form-control'>
+          <div class="col-md-3">
+            <div class="control-panel row panel panel-success">
+              <div class="panel-heading">
+                Control Panel
               </div>
+              <div class="panel-body">
+                <div class="list-group">
+                  <div class="list-group-item form-inline">
+                    <i class="fa fa-filter list-group-item-heading"></i>
+                    <select class="form-control" data-style="btn-primary" id="category-filter">
+                      <option>All</option>
+                      <% for (var i = 0; i < categories.length; i++) { %>
+                        <option value="<%= categories[i].id %>"><%= categories[i].name %></option>
+                      <% } %>
+                    </select>
+                  </div>
+                  <div class="list-group-item">
+                    <i class="fa fa-sort-amount-desc"></i>
+                      <input type="radio" name='order' value="createdAt" checked="checked">Date
+                      <input type="radio" name='order' value="price">Price
+                  </div>
+                  <div class="list-group-item form-inline">
+                    <i class="fa fa-map-marker"></i>
+                    <input type="range" class='form-control'>
+                </div>
+                </div>
               </div>
             </div>
+
+            <div class="row panel panel-info">
+              <div class="panel-heading">
+                Map
+              </div>
+              <div class="panel-body">
+                <div id="map-canvas"></div>
+              </div>
+            </div>
+
           </div>
+
           <div id="post-container" class="col-md-7 col-md-offset-1 bg-primary">
             <div class="posts">
               <% if (posts[0]) { %>
