adds settings page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,9 +13,13 @@ h1, h2, h3, h4, h5, h6{
   font-weight: 500;
 }
 
-.control-panel{
+.control-panel, .settings-panel{
   padding: 0;
-  margin
+}
+
+.list-group-item button i{
+  float: left;
+  margin-top: 4px;
 }
 
 .navbar-container{
