settings css changes

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col-xs-12 navbar-container">
           <nav class="navbar navbar-default" role="navigation">
-            <a class="navbar-brand" href="#">Bazaar</a>
+            <a class="navbar-brand" href="/">Bazaar</a>
             <div class="">
               <ul class="nav navbar-nav navbar-right mynavbar">
                 <li>
