--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,7 +53,7 @@ ul, .navbar-right{
   margin: 0;
 }
 
-.navbar-brand:hover{
+.navbar-brand:hover, .navbar-brand:focus{
   color: #eeeeee !important;
 }
 
@@ -353,9 +353,7 @@ textarea.parsley-success {
   font-weight: 500;
   font-size: 28px;
 }
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #18bc9c;
-}
+
 .navbar-default .navbar-text {
   color: #eeeeee;
 }
