--- a/views/main.ejs
+++ b/views/main.ejs
@@ -32,6 +32,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-58300675-1', {'userID': '<%=userID%>'});
+      ga('set', '&uid', "<%=userID%>");
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
 
