google analytics for settings page

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -33,6 +33,7 @@
 
       ga('create', 'UA-58300675-1', {'userID': '<%=userID%>'});
       ga('require', 'displayfeatures');
+      ga('set', '&uid', "<%=userID%>");
       ga('send', 'pageview');
 
     </script>
