adds ability to delete account

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -100,25 +100,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Post Modal -->
-      <div class="modal fade" id="post-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-              <i class="delete fa fa-trash"></i>
-              <h4 class="modal-title">Post Title</h4>
-            </div>
-            <img class="modal-image" height="200" width="200">
-            <div class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <a id="modal-contact" href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY" target="_blank" class="btn btn-success">Contact</a>
-            </div>
-          </div>
-        </div>
-      </div>
         <div class="row">
           <div class="settings-panel col-md-6 col-md-offset-3 panel panel-success">
             <div class="panel-heading">
@@ -127,10 +108,10 @@
             <div class="panel-body">
               <div class="list-group">
                 <div class="list-group-item">
-                  <button class='btn btn-primary form-control'><i class="fa fa-lock list-group-item-heading"></i> Change Password</button>
+                  <button id='change-password' class='btn btn-primary form-control'><i class="fa fa-lock list-group-item-heading"></i> Change Password</button>
                 </div>
                 <div class="list-group-item">
-                  <button class='btn btn-danger form-control'><i class="fa  fa-times-circle"></i><span>Delete Account</span></button>
+                  <button id='delete-account' class='btn btn-danger form-control'><i class="fa  fa-times-circle"></i><span>Delete Account</span></button>
                 </div>
               </div>
             </div>
