--- a/views/main.ejs
+++ b/views/main.ejs
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-xs-12 navbar-container">
           <nav class="navbar navbar-default" role="navigation">
-            <a class="navbar-brand" href="#">Bazaar</a>
+            <a class="navbar-brand" href="/">Bazaar</a>
             <div class="">
               <ul class="nav navbar-nav navbar-right mynavbar">
                 <li>
@@ -59,7 +59,7 @@
                   </ul>
                 </li>
                </ul>
-               <form class="navbar-form navbar-right navbar-search" action="#" role="search">
+               <form class="navbar-form navbar-right navbar-search" id="search-form" action="#" role="search">
                 <div class="form-group">
                   <div class="input-group">
                     <input class="form-control" type="search" placeholder="Search">
