--- a/views/main.ejs
+++ b/views/main.ejs
@@ -191,6 +191,7 @@
     <script src="/javascripts/parsley.min.js"></script>
     <script src="/javascripts/uuid.js"></script>
     <script src="/javascripts/ejs_production.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="/javascripts/sweet-alert.min.js"></script>
     <script src="/javascripts/main.min.js"></script>
