--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,12 @@ h1, h2, h3, h4, h5, h6{
   font-weight: 500;
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #map-canvas {
   height: 200px;
   margin: 0;
