adds dialog when no posts are found

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,12 @@ h1, h2, h3, h4, h5, h6{
   padding: 0;
 }
 
+.no-posts-warning{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .control-panel, .settings-panel{
   padding: 0;
 }
