adds intermediate CA

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/landing.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/sweet-alert.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- TODO: make sure bootstrap-responsive.min.css points to BootTheme
         generated file -->
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -88,16 +89,16 @@
     <div class="container-narrow">
       <div class="row-fluid marketing">
           <div class="span6">
-              <h4>Simple</h4>
+              <h4><i class="fa fa-circle-o"></i> Simple</h4>
               <p>Search and filter postings to find textbooks, jobs, roomates, and much more. All in one place.</p>
-              <h4>Exclusive</h4>
+              <h4><i class="fa fa-book"></i> Exclusive</h4>
               <p>All users are verified students, ensuring our postings are from friendly peers.</p>
           </div>
           <div class="span6">
-              <h4>Secure</h4>
-              <p>Gone are the days of dealing with randos off. Rest easy knowing there is a friendly face on the other end!</p>
-              <h4>Free</h4>
-              <p>Bazaar is an free service to students, and always will be.</p>
+              <h4><i class="fa fa-lock"></i> Secure</h4>
+              <p>All connections are secred with SSL encryption, ensuring you can browse safely.</p>
+              <h4><i class="fa fa-gift"></i> Free</h4>
+              <p>Bazaar is an free service to students, and always will be. Enjoy!</p>
           </div>
       </div>
       <hr>
