--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -142,6 +142,7 @@ ul, .navbar-right{
 }
 .container-narrow > hr {
   margin: 30px 0;
+  visibility: hidden;
 }
 /* Main marketing message and sign up button */
 .jumbotron {
@@ -160,6 +161,11 @@ ul, .navbar-right{
 /* Supporting marketing content */
 .marketing {
   margin: 60px 0;
+  padding: 20px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  background-color: white;
+  border-color: #18bc9c;
 }
 .marketing p + h4 {
   margin-top: 28px;
