--- a/views/main.ejs
+++ b/views/main.ejs
@@ -85,7 +85,7 @@
             <form id="create-form">
               <div class="modal-body">
                 <input class="form-control create-title" required type="text" placeholder="Title">
-                <input class="form-control create-description" required type="text" placeholder="Description">
+                <textarea class="form-control create-description" required type="text" placeholder="Description"></textarea>
                 <input class="form-control create-price" required type="number" placeholder="Price">
                 <select class='form-control create-categories' required>
                   <% for (var i = 0; i < categories.length; i++) { %>
