--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -249,8 +249,17 @@ input[type="radio"]{
   padding-bottom: 0;
 }
 
-#login-dropdown-menu > input{
+#login-dropdown-menu > input, #login-dropdown-menu > button {
   margin-top: 5px;
+}
+
+#login-dropdown-menu > a {
+  margin-top: 3px;
+  font-size: 12px;
+}
+
+.nav .open>a, .nav .open>a:hover, .nav .open>a:focus{
+  background-color: #ffffff;
 }
 
 #create-modal .form-control{
