allows secure account recovery

--- a/views/forgot_password.ejs
+++ b/views/forgot_password.ejs
@@ -45,8 +45,10 @@
           </div>
           <div class="panel-body">
             <form class="col-md-10 col-md-offset-1" id='reset-password'>
-              <input type='email' id='reset-password-email' class='form-control' placeholder='Email'>
-              <button type="submit" class='btn btn-primary form-control' style="margin-top: 10px;">Reset Password</button>
+              <input type='email' id='reset-password-email' class='form-control' placeholder='Email' required
+              data-parsley-required-message="Looks like you forgot to fill this out">
+              <button type="submit" class='btn btn-primary form-control'
+              style="margin-top: 10px;">Reset Password</button>
             </form>
           </div>
         </div>
@@ -56,6 +58,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/parsley.min.js"></script>
     <script src="/javascripts/sweet-alert.min.js"></script>
     <script src="/javascripts/forgot_password.js"></script>
   </body>
