--- a/views/new_password.ejs
+++ b/views/new_password.ejs
@@ -37,6 +37,7 @@
     </script>
   </head>
   <body>
+    <input type="hidden" id="user-id" value="<%=userID%>"></input>
     <div class="container">
       <div class="row">
         <div class="settings-panel col-md-6 col-md-offset-3 panel panel-success">
@@ -46,9 +47,11 @@
           <div class="panel-body">
             <form class="col-md-10 col-md-offset-1" id='new-password-form'>
               <input type='password' id='new-password' class='form-control'
-              placeholder="Password">
+              placeholder="Password" required data-parsley-minlength="6"
+              data-parsley-required-message="Looks like you forgot to fill this out">
               <input type='password' id='confirm-new-password' class='form-control'
-              placeholder="Confirm Password">
+              placeholder="Confirm Password" required data-parsley-minlength="6"
+              data-parsley-required-message="Looks like you forgot to fill this out" data-parsley-equalto="#new-password">
               <button type="submit" class='btn btn-primary form-control' style="margin-top: 10px;">Submit</button>
             </form>
           </div>
@@ -59,6 +62,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/parsley.min.js"></script>
     <script src="/javascripts/sweet-alert.min.js"></script>
     <script src="/javascripts/forgot_password.js"></script>
   </body>
