--- a/views/main.ejs
+++ b/views/main.ejs
@@ -114,7 +114,7 @@
               <i class="delete fa fa-trash"></i>
               <h4 class="modal-title">Post Title</h4>
             </div>
-            <img class="modal-image" height="200" width="200">
+            <img class="modal-image">
             <div class="modal-body"></div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
