--- a/views/main.ejs
+++ b/views/main.ejs
@@ -112,7 +112,7 @@
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <i class="delete fa fa-trash"></i>
-              <h4 class="modal-title">Post Title</h4>
+              <h3 class="modal-title"></h3>
             </div>
             <img class="modal-image">
             <div class="modal-body"></div>
