--- a/views/main.ejs
+++ b/views/main.ejs
@@ -114,8 +114,10 @@
               <i class="delete fa fa-trash"></i>
               <h3 class="modal-title"></h3>
             </div>
-            <img class="modal-image">
-            <div class="modal-body"></div>
+            <div class="modal-body">
+              <img class="modal-image">
+              <div class="post-description"></div>
+            </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               <a id="modal-contact" href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY" target="_blank" class="btn btn-success">Contact</a>
