--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -315,6 +315,23 @@ input[type="radio"]{
   border-radius: 3px;
 }
 
+.modal-body::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.modal-body::-webkit-scrollbar{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+.modal-body::-webkit-scrollbar-thumb{
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #34495e;
+}
+
 @media (max-width: 983px) {
   .jumbotron h1{
     font-size: 65px;
