--- a/views/main.ejs
+++ b/views/main.ejs
@@ -116,6 +116,9 @@
             </div>
             <div class="modal-body">
               <img class="modal-image">
+              <div class="post-tumbnails">
+                <img class="modal-thumbnail" height="20px" width="20px">
+              </div>
               <div class="post-description"></div>
             </div>
             <div class="modal-footer">
