--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding-top: 20px !important;
   padding-bottom: 40px !important;
   background-color: #ECF0F1;
   font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -35,15 +34,11 @@ h1, h2, h3, h4, h5, h6{
   padding: 0;
 }
 
-
 .list-group-item button i{
   float: left;
   margin-top: 4px;
 }
 
-.navbar-container{
-  padding: 0;
-}
 .bg-primary{
   background-color: #34495e;
 }
@@ -58,6 +53,10 @@ h1, h2, h3, h4, h5, h6{
 ul, .navbar-right{
   color: #18bc9c;
   margin-right: 0;
+}
+
+.navbar{
+  border-radius: 0;
 }
 
 .navbar-nav>li{
@@ -302,6 +301,10 @@ input[type="radio"]{
   overflow-y: auto;
 }
 
+.modal-body .post-description{
+  white-space: pre;
+}
+
 .modal-title{
   font-weight: 600;
   font-size: 20px;
@@ -331,6 +334,25 @@ input[type="radio"]{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #34495e;
 }
+
+
+body::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb{
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #18bc9c;
+}
+
 
 @media (max-width: 983px) {
   .jumbotron h1{
