dynamically adds thumbnails

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -118,8 +118,7 @@
             </div>
             <div class="modal-body">
               <img class="modal-image">
-              <div class="post-tumbnails">
-                <img class="modal-thumbnail" height="20px" width="20px">
+              <div class="modal-thumbnails">
               </div>
               <div class="post-description"></div>
             </div>
