--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -318,6 +318,16 @@ input[type="radio"]{
   border-radius: 3px;
 }
 
+.modal-thumbnails{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.modal-thumbnail{
+  height: 20px;
+  width: 20px;
+}
+
 .modal-body::-webkit-scrollbar-track{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
