--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -40,12 +40,10 @@
   </head>
   <body>
     <input type="hidden" id="user-id" value="<%=userID%>"></input>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 navbar-container">
-          <nav class="navbar navbar-default" role="navigation">
-            <a class="navbar-brand" href="/">Bazaar</a>
-            <div class="">
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container">
+            <div class="row">
+              <a class="navbar-brand" href="/">Bazaar</a>
               <ul class="nav navbar-nav navbar-right mynavbar">
                 <li>
                   <a href="#" id="create" data-toggle="modal" data-target="#create-modal"><i class="fa fa-plus-circle fa-lg"></i></a>
@@ -53,12 +51,12 @@
                 <li>
                   <a href="#" id="settings" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cog fa-lg"></i></a>
                   <ul class="dropdown-menu" id="settings-dropdown-menu">
-                    <li><a href="#">Settings</a></li>
+                    <li><a href="/settings">Settings</a></li>
                     <li><a href="#" id="logout">Log out</a></li>
                   </ul>
                 </li>
                </ul>
-               <form class="navbar-form navbar-right navbar-search" action="#" role="search">
+               <form class="navbar-form navbar-right navbar-search" id="search-form" action="#" role="search">
                 <div class="form-group">
                   <div class="input-group">
                     <input class="form-control" type="search" placeholder="Search">
@@ -68,11 +66,10 @@
                   </div>
                 </div>
               </form>
-            </div><!-- /.navbar-collapse -->
-          </nav><!-- /navbar -->
-        </div>
-      </div>
-
+            </div>
+          </div><!-- /.navbar-collapse -->
+        </nav><!-- /navbar -->
+    <div class="container">
       <!-- Create Modal -->
       <div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -122,6 +119,7 @@
             <p>&copy; Bazaar 2015</p>
         </div>
     </div>
+  </div>
     <!-- /container -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/javascripts/jquery.min.js"></script>
