--- a/views/main.ejs
+++ b/views/main.ejs
@@ -90,7 +90,7 @@
                   <% } %>
                 </select>
                 <span class="btn btn-primary btn-file form-control">
-                  Upload an Image <input id='create-file' type="file">
+                  Upload an Image <input id='create-file' type="file" names="files[]" multiple>
                 </span>
               </div>
               <div class="modal-footer">
@@ -177,6 +177,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery.ui.widget.js"></script>
+    <script src="/javascripts/jquery.iframe-transport.js"></script>
+    <script src="/javascripts/jquery.fileupload.js"></script>
     <script src="https://bootflat.github.io/bootflat/js/icheck.min.js"></script>
     <script src="https://bootflat.github.io/bootflat/js/jquery.fs.selecter.min.js"></script>
     <script src="https://bootflat.github.io/bootflat/js/jquery.fs.stepper.min.js"></script>
