--- a/views/main.ejs
+++ b/views/main.ejs
@@ -112,7 +112,7 @@
               <h3 class="modal-title"></h3>
             </div>
             <div class="modal-body">
-              <img class="modal-image">
+              <div class="modal-image-container"><div class='modal-image'></div></div>
               <div class="modal-thumbnails">
               </div>
               <div class="post-description"></div>
